<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/accent_35"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical"
        >
    <ImageView
            android:layout_width="220dp"
            android:layout_height="73dp"
            android:scaleType="centerInside"
            android:layout_marginBottom="20dp"
            android:src="@drawable/wheresk_text"
            />
    <TextView
            style="@style/signInPageDescStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheresk_desc1"
            android:layout_marginBottom="5dp"
            />
    <TextView
            style="@style/signInPageDescStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheresk_desc2"
            android:layout_marginBottom="20dp"
            />
    <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            />
    <TextView
            style="@style/signInPageTermsOfUseStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheresk_terms_of_use1"
            android:paddingBottom="5dp"
            />
    <TextView
            android:id="@+id/text_view_terms_of_use"
            style="@style/signInPageTermsOfUseStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheresk_terms_of_use2"
            />
</LinearLayout>
