<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:background="@color/accent_14"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/system_configuration_whole_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical"
                >
            <LinearLayout
                    style="@style/systemConfigContainerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                <TextView
                        android:id="@+id/main_setting_header"
                        style="@style/groupHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_setting"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/accent_28"
                        />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical"
                        >
                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:orientation="horizontal"
                            android:gravity="left|center"
                            android:layout_marginTop="20dp"
                            >
                        <TextView
                                style="@style/systemConfigLableStyleLevel2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerInParent="true"
                                android:text="@string/notification_when_new_answer_provided"/>
                        <ToggleButton
                                android:id="@+id/notification_when_new_answer_provided_toggle"
                                android:layout_width="69dp"
                                android:layout_height="25dp"
                                android:background="@drawable/toggle_selector"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="10dp"
                                android:layout_centerInParent="true"
                                android:textOn=""
                                android:textOff=""/>
                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:orientation="horizontal"
                            android:gravity="left|center"
                            android:layout_marginTop="20dp"
                            >
                        <TextView
                                style="@style/systemConfigLableStyleLevel2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerInParent="true"
                                android:text="@string/notification_when_receive_thank"/>
                        <ToggleButton
                                android:id="@+id/notification_when_receive_thank_toggle"
                                android:layout_width="69dp"
                                android:layout_height="25dp"
                                android:background="@drawable/toggle_selector"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="10dp"
                                android:layout_centerInParent="true"
                                android:textOn=""
                                android:textOff=""/>
                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:orientation="horizontal"
                            android:gravity="left|center"
                            android:layout_marginTop="20dp"
                            >
                        <TextView
                                style="@style/systemConfigLableStyleLevel2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerInParent="true"
                                android:text="@string/notification_when_receive_comments"/>
                        <ToggleButton
                                android:id="@+id/notification_when_receive_comments_toggle"
                                android:layout_width="69dp"
                                android:layout_height="25dp"
                                android:background="@drawable/toggle_selector"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="10dp"
                                android:layout_centerInParent="true"
                                android:textOn=""
                                android:textOff=""/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
            <Button android:id="@+id/openDbManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Db Manager"
                    android:visibility="gone"
                    />
        </LinearLayout>
    </ScrollView>
    <ListView
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:background="@color/grey_dark_mini_transparent"/>
</android.support.v4.widget.DrawerLayout>
